--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   font-family: Arial, sans-serif;
   background-color: #333333;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -16,6 +17,8 @@ body {
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 20px auto;
+  max-width: 400px;
 }
 
 /* Styling for the game board */
@@ -81,4 +84,16 @@ body {
 #close-dialog:hover,
 #restart-button:hover {
   background-color: #686767;
+}
+
+.round-messages {
+  padding: 10px;
+  background-color: transparent;
+  margin: 0;
+}
+
+.round-messages p {
+  font-size: 24px;
+  color: white;
+  text-align: center;
 }
